Fix clipboard functionality by wrapping image and button and using that. fixes #11

--- a/css/gifdrop.scss
+++ b/css/gifdrop.scss
@@ -148,6 +148,8 @@ input, button {
 	height: 300px;
 	overflow: auto;
 	button.copy {
+		display: block;
+		margin: 0 auto;
 		font-size: 14px;
 		padding: 6px;
 		background: #eee;
